--- a/Medicine_Project/Medicine_Project/Medicine_Project.csproj
+++ b/Medicine_Project/Medicine_Project/Medicine_Project.csproj
@@ -27,4 +27,8 @@
     <Folder Include="DataBase\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OxyPlot.WindowsForms" Version="2.1.2" />
+  </ItemGroup>
+
 </Project>
